--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage":"http://homeofsastra.github.io/home-of-sastra-admin",
   "name": "demo-admin-hos",
   "version": "0.1.0",
   "private": true,
@@ -28,9 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^5.0.0"
   }
 }
